Import of THALJEF/Dist-Requires-0.002 from CPAN.
gitpan-cpan-distribution: Dist-Requires
gitpan-cpan-version:      0.002
gitpan-cpan-path:         THALJEF/Dist-Requires-0.002.tar.gz
gitpan-cpan-author:       THALJEF
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -10,8 +10,6 @@ build_requires:
   Module::Build: 0.3601
   Test::More: 0
   Test::Most: 0
-  strict: 0
-  warnings: 0
 configure_requires:
   Module::Build: 0.3601
 dynamic_config: 0
@@ -30,7 +28,7 @@ no_index:
 provides:
   Dist::Requires:
     file: lib/Dist/Requires.pm
-    version: 0.001
+    version: 0.002
 requires:
   Archive::Extract: 0
   CPAN::Meta: 0
@@ -38,15 +36,19 @@ requires:
   Cwd: 0
   ExtUtils::MakeMaker: 6.58
   File::Temp: 0
+  Getopt::Long: 0
   IPC::Run: 0
   Module::Build: 0.21
   Module::CoreList: 0
   Moose: 0
   Path::Class: 0
+  Pod::Usage: 0
   namespace::autoclean: 0
   perl: 5.006
+  strict: 0
   version: 0
+  warnings: 0
 resources:
   bugtracker: https://github.com/thaljef/Dist-Requires/issues
   repository: git://github.com/thaljef/Dist-Requires.git
-version: 0.001
+version: 0.002
