--- a/META.yml
+++ b/META.yml
@@ -28,7 +28,7 @@ no_index:
 provides:
   Dist::Requires:
     file: lib/Dist/Requires.pm
-    version: 0.002
+    version: 0.003
 requires:
   Archive::Extract: 0
   CPAN::Meta: 0
@@ -41,6 +41,7 @@ requires:
   Module::Build: 0.21
   Module::CoreList: 0
   Moose: 0
+  Moose::Util::TypeConstraints: 0
   Path::Class: 0
   Pod::Usage: 0
   namespace::autoclean: 0
@@ -51,4 +52,4 @@ requires:
 resources:
   bugtracker: https://github.com/thaljef/Dist-Requires/issues
   repository: git://github.com/thaljef/Dist-Requires.git
-version: 0.002
+version: 0.003
