Import of THALJEF/Dist-Requires-0.007 from CPAN.
gitpan-cpan-distribution: Dist-Requires
gitpan-cpan-version:      0.007
gitpan-cpan-path:         THALJEF/Dist-Requires-0.007.tar.gz
gitpan-cpan-author:       THALJEF
gitpan-cpan-maturity:     released

--- a/dist.ini
+++ b/dist.ini
@@ -5,7 +5,7 @@ license          = Perl_5
 copyright_holder = Imaginative Software Systems
 copyright_year   = 2011
 
-version          = 0.006
+version          = 0.007
 
 [GatherDir]         ; everything under top dir
 [PruneCruft]        ; default stuff to skip
@@ -18,11 +18,17 @@ version          = 0.006
 ; generated files
 [License]           ; boilerplate license
 [ReadmeFromPod]     ; from Pod (runs after PodWeaver)
+[ReadmeAnyFromPod / ReadmePodInRoot]
+type = markdown
+filename = README.md
+location = root
  
 ; t tests
 [Test::Compile]     ; make sure .pm files all compile
 fake_home = 1       ; fakes $ENV{HOME} just in case
  
+[Test::ReportPrereqs]
+
 ; xt tests
 [MetaTests]         ; xt/release/meta-yaml.t
 [PodSyntaxTests]    ; xt/release/pod-syntax.t
@@ -41,6 +47,10 @@ stopwords = PASSed
 ; metadata
 [AutoPrereqs]       ; find prereqs from code
 [Prereqs]           ; prereqs that aren't findable
+
+; author prereqs (magic comments)
+; authordep Pod::Weaver::Plugin::StopWords
+; authordep Pod::Weaver::Section::Support
 
 [MinimumPerl]       ; determine minimum perl version
 [GitHub::Meta]      ; add Github links
