--- a/META.yml
+++ b/META.yml
@@ -6,7 +6,9 @@ build_requires:
   File::Basename: 0
   File::Find: 0
   File::Spec: 0
+  File::Spec::Functions: 0
   FindBin: 0
+  List::Util: 0
   Module::Build: 0.3601
   Test::More: 0
   Test::Most: 0
@@ -15,7 +17,7 @@ build_requires:
 configure_requires:
   Module::Build: 0.3601
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.300010, CPAN::Meta::Converter version 2.120630'
+generated_by: 'Dist::Zilla version 4.300020, CPAN::Meta::Converter version 2.120921'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -30,7 +32,7 @@ no_index:
 provides:
   Dist::Requires:
     file: lib/Dist/Requires.pm
-    version: 0.006
+    version: 0.007
 requires:
   Archive::Extract: 0
   CPAN::Meta: 0
@@ -50,4 +52,4 @@ requires:
 resources:
   bugtracker: https://github.com/thaljef/Dist-Requires/issues
   repository: git://github.com/thaljef/Dist-Requires.git
-version: 0.006
+version: 0.007
