Import of THALJEF/Dist-Requires-0.008 from CPAN.
gitpan-cpan-distribution: Dist-Requires
gitpan-cpan-version:      0.008
gitpan-cpan-path:         THALJEF/Dist-Requires-0.008.tar.gz
gitpan-cpan-author:       THALJEF
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,11 +1,9 @@
 ---
-abstract: 'Identify requirements for a distribution'
+abstract: 'Identify prerequisites for a distribution'
 author:
   - 'Jeffrey Ryan Thalhammer <jeff@imaginative-software.com>'
 build_requires:
-  File::Basename: 0
   File::Find: 0
-  File::Spec: 0
   File::Spec::Functions: 0
   FindBin: 0
   List::Util: 0
@@ -32,19 +30,19 @@ no_index:
 provides:
   Dist::Requires:
     file: lib/Dist/Requires.pm
-    version: 0.007
+    version: 0.008
 requires:
   Archive::Extract: 0
   CPAN::Meta: 0
   Carp: 0
-  Cwd: 0
+  Cwd::Guard: 0
   ExtUtils::MakeMaker: 6.58
   File::Temp: 0
   IPC::Run: 0
   Module::Build: 0.21
   Module::CoreList: 0
   Moose: 0
-  Moose::Util::TypeConstraints: 0
+  MooseX::Types::Perl: 0
   Path::Class: 0
   namespace::autoclean: 0
   perl: 5.006
@@ -52,4 +50,4 @@ requires:
 resources:
   bugtracker: https://github.com/thaljef/Dist-Requires/issues
   repository: git://github.com/thaljef/Dist-Requires.git
-version: 0.007
+version: 0.008
