--- a/dist.ini
+++ b/dist.ini
@@ -5,7 +5,7 @@ license          = Perl_5
 copyright_holder = Imaginative Software Systems
 copyright_year   = 2011
 
-version          = 0.007
+version          = 0.008
 
 [GatherDir]         ; everything under top dir
 [PruneCruft]        ; default stuff to skip
@@ -33,7 +33,7 @@ fake_home = 1       ; fakes $ENV{HOME} just in case
 [MetaTests]         ; xt/release/meta-yaml.t
 [PodSyntaxTests]    ; xt/release/pod-syntax.t
 [PodCoverageTests]  ; xt/release/pod-coverage.t
-[Test::Portability] ; xt/release/portability.t (of file name)
+;[Test::Portability] ; xt/release/portability.t (of file name)
 [Test::Version]     ; xt/release/test-version.t
 
 [Test::Perl::Critic] ; xt/author/critic.t
